tests/expectations/compiler/console/assert_fail.out
Error [EPAR0370005]: expected ',' -- found ')'
    --> compiler-test:5:27
     |
   5 |         assert_eq(a == 1u8);
     |                           ^
